# biodivine-boolean-functions

./: .gitignore  Cargo.toml  LICENSE  README.md  dev-requirements.txt  pyproject.toml
.github/workflows/: build.yml
benchmark/: .gitignore  bench.sh  bench_bdd_adder.py  bench_bdd_monotonicity.py  bench_expr_cnf.py  bench_expr_parser.py  bench_parser.py  bench_ripple_carry_adder.py  bench_table_subst.py  expressions.txt  extract_expressions.py  utils.py
scripts/: dev_requirements.txt  local_dev.sh
src/: lib.rs
src/bdd/: mod.rs
src/bdd/iterators/: image.rs  mod.rs  support.rs
src/bdd/traits/: boolean_function.rs  evaluate.rs  from_expression.rs  from_table.rs  gather_literals.rs  mod.rs
src/bdd/utils/: extend_variables.rs  mod.rs  prune_variables.rs
src/bindings/: bdd.rs  error.rs  expression.rs  mod.rs  table.rs
src/bindings/iterators/: domain.rs  mod.rs  range_bdd.rs  range_expression.rs  range_table.rs  relation_bdd.rs  relation_expression.rs  relation_table.rs  support_bdd.rs  support_expression.rs  support_table.rs
src/expressions/: mod.rs  traits.rs
src/expressions/iterators/: domain.rs  image.rs  mod.rs  relation.rs  support.rs
src/expressions/structs/: expression.rs  mod.rs  node.rs
src/expressions/traits/: boolean_function.rs  display.rs  evaluate.rs  from_bdd.rs  gather_literals.rs  mod.rs  parse.rs  power_set.rs  semantic_eq.rs
src/iterators/: domain.rs  image.rs  mod.rs  relation.rs  support.rs
src/parser/: error.rs  mod.rs  parse.rs  token.rs  tokenize.rs
src/parser/structs/: final_token.rs  intermediate_token.rs  (+2 more)
src/table/: display_formatted.rs  mod.rs
src/traits/: boolean_function.rs  evaluate.rs  gather_literals.rs  mod.rs  parser.rs  power_set.rs  semantic_eq.rs
src/utils/: bool_point_to_valuation.rs  btreeset_to_valuation.rs  mod.rs  row_index_to_bool_point.rs
(+50 files in other folders)
