[package]
name = "biodivine-boolean-functions"
version = "0.1.0"
edition = "2021"

[lib]
# will be used in Python to import the library (i.e. `import string_sum`)
name = "biodivine_boolean_functions"
# necessary to produce a shared library for Python to import from
crate-type = ["cdylib", "rlib"]

[features]
python = ["dep:pyo3"]

[dependencies]
thiserror = "1.0.50"
itertools = "0.12.0"
regex = "1.10.3"
lazy_static = "1.4.0"
tabled = "0.15.0"

pyo3 = { version = "0.21.1", features = ["abi3-py37", "extension-module"], optional = true }