[package]
name = "biodivine-boolean-functions"
version = "0.1.0"
edition = "2021"

[lib]
# will be used in Python to import the library (i.e. `import string_sum`)
name = "biodivine_boolean_functions"
# necessary to produce a shared library for Python to import from
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3"]
csv = ["dep:csv", "dep:tempfile"]

[dependencies]
thiserror = "1.0.61"
itertools = "0.13.0"
regex = "1.10.4"
lazy_static = "1.4.0"
tabled = "0.15.0"
csv = { version = "1.3.0", optional = true }
tempfile = { version = "3.10.1", optional = true }
num-bigint = "0.4.4"
biodivine-lib-bdd = "0.5.16"

pyo3 = { version = "0.21.2", features = ["abi3-py37", "extension-module", "num-bigint"], optional = true }

[dev-dependencies]
rstest = "0.19.0"
rstest_reuse = "0.6.0"